--- a/checkout/ThankYou.html
+++ b/checkout/ThankYou.html
@@ -18,7 +18,10 @@
         <div id="tycash"></div>
         <hr>
         <div id="tydue"></div>
-        
+
+             <br>
+        <button class="HOME" type="button" onclick="TakeMeHome()">Home</button>
+            
         <script src="script.js"></script>
         <script src="home.js"></script>
         </div><h2>Enjoy Your The Cafe Leblanc Experience</h2>
